<resources>
    <string name="app_name">FirebaseExample</string>
    <string name="facebook_app_id">931031720333908</string>
    <string name="fb_login_protocol_scheme">931031720333908</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, legimus ceteros mediocrem id usu, cum soluta dolorum epicurei ne, cu illud quaestio est. Nec in ullum eruditi laoreet, mea autem illud et. Ne solet sadipscing eloquentiam est. Sint viderer oportere qui ea. At cibo tractatos assueverit sed.ri altera nominavi inciderint et, et suscipit detraxit eam, delenit minimum epicuri ei sea. Mei tation volumus efficiantur eu. Ius ut elit ocurreret, duo cu sonet placerat sententiae. Paulo primis persius vim ex, ea timeam fuisset erroribus pri. Dicant voluptaria ad sit, no eos tota solum munere. Legere adversarium theophrastus ei ius.Esse sale molestie ea eum. Sea tibique eligendi et. Tota expetenda ad est, usu ne duis facilis, ipsum iriure scribentur pri ei. Qui ut regione tibique propriae, vel in ponderum elaboraret, ex ullum deserunt nec. Id rebum tritani quaeque pri, debet intellegebat duo an. Vim graeco nominati at, duo alia detracto id.Eum ei adipisci torquatos conceptam, nec at autem expetenda intellegat. Ea sit errem doctus aliquid, duo esse prodesset ad, possim sensibus tractatos ei quo. Pri omnes mollis percipitur ex, veniam facete albucius an eum. Cu mucius postulant honestatis pro, no nec invenire corrumpit, tritani laboramus eum cu. Scripta corrumpit deseruisse qui ad, dictas civibus in per, est delenit explicari scripserit et. Cu eum aeque scriptorem.
Duo movet molestiae mediocritatem ei. Pro liber putent periculis ad. Nec ea elitr causae convenire. Ipsum corrumpit eu vel. Te nihil viderer perfecto mel.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="card_view1_title">Sattas</string>
    <string name="card_view1_description">Eskitilmiş</string>
    <string name="card_view2_title">Hey Douglas</string>
    <string name="card_view2_description">Leylim</string>
    <string name="dialog_title">Add User</string>
    <string name="dialog_message">Dialog Message</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
